// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserChatsView snapshot tests should match snapshot 1`] = `
<Fragment>
  <styled.div>
    <UserChatsList />
    <Pagination
      getData={[Function]}
      pagesPerSlide={5}
      selector={[Function]}
      setData={[Function]}
    />
  </styled.div>
</Fragment>
`;

exports[`UserChatsView snapshot tests should match snapshot with error 1`] = `
<Fragment>
  <styled.div>
    <UserChatsList />
    <div
      data-testid="error"
    >
      Unavailable
    </div>
    <Pagination
      getData={[Function]}
      pagesPerSlide={5}
      selector={[Function]}
      setData={[Function]}
    />
  </styled.div>
</Fragment>
`;

exports[`UserChatsView snapshot tests should match snapshot with loading request 1`] = `
<Fragment>
  <styled.div>
    <UserChatsList />
    <LoadingIndicator />
  </styled.div>
</Fragment>
`;
